--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@
     text-decoration: none;
 }
 
+ul {
+    margin-bottom: 0;
+}
+
 html {
     width: 100%;
     height: 100%;
@@ -56,26 +60,26 @@ header {
 }
 
 h2 {
-    font-size: 48px;
+    font-size: 24px;
     text-transform: uppercase;
+    font-weight: bold;
 }
 
 h3 {
-    font-size: 48px;
+    font-size: 24px;
     font-style: normal;
-    font-size: 48px;
+    font-weight: bold;
 }
 
 p {
     line-height: 27px;
     letter-spacing: 0.07em;
-    font-size: 18px;
+    font-size: 12px;
 }
 
 .logotipo {
     display: block;
-
-    width: 80px
+    width: 36px
 }
 
 a {
@@ -89,12 +93,15 @@ a:hover {
 
 .nav-web {
     display: flex;
+    font-size: 12px;
     align-items: center;
     transition: 0.5s;
+
 }
 
 
 .nav-mobile {
+    font-size: 20px;
     display: none;
     align-items: center;
     transition: 1s;
@@ -102,10 +109,10 @@ a:hover {
 
 .nav-link {
     display: block;
-    font-size: 20px;
+    
     max-width: 167.8px;
     text-align: center;
-    padding: 20px;
+    padding: 12px;
     text-decoration: none;
     color: var(--cor2);
     text-transform: uppercase;
@@ -212,7 +219,7 @@ footer {
 }
 
 main {
-    margin-top: 256px;
+    margin-top: 200px;
     display: flex;
     flex-direction: column;
     gap: 92px;
@@ -245,7 +252,7 @@ main {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 112px;
+    gap: 60px;
     padding: 0px 50px;
 }
 
@@ -255,6 +262,7 @@ main {
 
 .about img {
     max-width: fit-content;
+    width: 225px;
 }
 
 img {
@@ -414,8 +422,11 @@ footer span {
     .nav-link {
         width: 100%;
         max-width: none;
+        padding: 20px;
 
     }
+
+    
 
     .p-nav-mobile {
         height: 100vh;
@@ -423,7 +434,7 @@ footer span {
     }
 
     .nav-mobile {
-        margin-top: 108px;
+        margin-top: 102px;
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
@@ -466,6 +477,7 @@ footer span {
 
     .logotipo {
         width: 50px;
+        
     }
 
     .nick-banner {
