--- a/css/style.css
+++ b/css/style.css
@@ -38,24 +38,23 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
-    gap: 185px;
 
 
 }
 
 header {
-    background-color: rgba(255, 255, 255, 0.63);
-    box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.05);
+    background-color: rgba(255, 255, 255, 0.45);
+    box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.05);
     width: 100%;
     min-height: fit-content;
-    padding: 20px 50px;
+    padding: 14px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     position: fixed;
     z-index: 2;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(45px);
     transition: 0.3s;
 }
 
@@ -63,6 +62,7 @@ h2 {
     font-size: 24px;
     text-transform: uppercase;
     font-weight: bold;
+    margin-bottom: 0;
 }
 
 h3 {
@@ -77,14 +77,37 @@ p {
     font-size: 12px;
 }
 
-.logotipo {
+#dlogo {
+    display: none;
+}
+
+#llogo {
     display: block;
+}
+
+.logotipo {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.logotipo > p {
+    font-size: 16px;
+    color: var(--cor2);
+    margin-bottom: -6px;
+    margin-left: -16px;
+}
+
+.logotipo h2 {
+    font: 20px;
+}
+
+.img-logotipo {
     width: 36px
 }
 
 a {
     text-decoration: none;
-    color: var(--cor1);
 }
 
 a:hover {
@@ -215,14 +238,119 @@ input:checked~header .navbar-toggler .bar:nth-child(3) {
 footer {
     display: flex;
     align-items: center;
-    margin-top: auto;
+    margin-top: 92px;
 }
 
 main {
-    margin-top: 200px;
+    margin-top: 182px;
     display: flex;
     flex-direction: column;
     gap: 92px;
+}
+
+.works {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+
+
+.all-works {
+    text-decoration: none;
+    background-image: url(/assets/ALLWORKS/RUKANGRAYSCALE.png);
+    background-position: 50% 50%;
+    background-size: 100%;
+    gap: 10px;
+    height: 200px;
+    cursor: pointer;
+    justify-content: center;
+    overflow: hidden;
+    width: 100%;
+    transition: 1s;
+}
+
+.all-works:hover {
+    background-size: 120%;
+    text-decoration: none;
+}
+.ic-works:hover {
+    background-size: 120%;
+    text-decoration: none;
+}
+.gd-works:hover {
+    background-size: 120%;
+    text-decoration: none;
+}
+.vm-works:hover {
+    background-size: 120%;
+    text-decoration: none;
+}
+
+.ic-works {
+    cursor: pointer;
+    background-image: url(/assets/ALLWORKS/THOR5.png);
+    background-position: 50% 50%;
+    background-size: 100%;
+    gap: 10px;
+    height: 200px;
+    justify-content: center;
+    overflow: hidden;
+    width: 100%;
+    transition: 1s;
+}
+
+.gd-works {
+    cursor: pointer;
+    background-image: url(/assets/ALLWORKS/BLOOP.png);
+    background-position: 50% 50%;
+    background-size: 100%;
+    gap: 10px;
+    height: 200px;
+    justify-content: center;
+    overflow: hidden;
+    width: 100%;
+    transition: 1s;
+}
+
+.vm-works {
+    cursor: pointer;
+    background-image: url(/assets/ALLWORKS/Captura\ de\ tela\ 2023-03-21\ 140206.png);
+    background-position: 50% 50%;
+    background-size: 100%;
+    gap: 10px;
+    height: 200px;
+    justify-content: center;
+    overflow: hidden;
+    width: 100%;
+    transition: 1s;
+}
+
+.a-all-works {
+    background-color: #0e0d2d7d;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    
+}
+
+.works-categories {
+    display: flex;
+    width: 100%;
+    flex-wrap: nowrap;
+    
+}
+
+.a-all-works > p {
+    text-align: center;
+    font-size: 24px;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 0;
 }
 
 
@@ -321,14 +449,12 @@ video {
 }
 
 footer {
-    border-top: 1px solid var(--cor2);
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    gap: 75px;
-    padding: 75px;
-    font-size: 25px;
-    color: var(--cor2);
+    gap: 8px;
+    padding: 26px;
+    font-size: 12px;
 }
 
 footer a {
@@ -426,7 +552,18 @@ footer span {
 
     }
 
+    .logotipo > p {
+        display: none;
+    }
+
     
+    .logotipo > h2 {
+        display: none;
+    }
+
+    .works-categories {
+        flex-wrap: wrap;
+    }
 
     .p-nav-mobile {
         height: 100vh;
@@ -512,3 +649,38 @@ footer span {
         display: none;
     }
 }
+
+@media (prefers-color-scheme: dark) {
+    body {
+      background-color: rgb(27, 27, 27);
+      color: white;
+    }
+
+    footer a {
+        color: #e0e0e0;
+    }
+
+    header {
+        background-color: rgba(46, 46, 46, 0.45);
+    }
+
+    #dlogo {
+        display: block;
+    }
+
+    #llogo {
+        display: none;
+    }
+
+    .logotipo p {
+        color: rgb(176, 176, 176);
+    }
+
+    .bar {
+        background-color: white;
+    }
+
+    .nav-link {
+        color: white;
+    }
+  }
