--- a/css/style.css
+++ b/css/style.css
@@ -108,10 +108,12 @@ p {
     color: var(--cor2);
     margin-bottom: -6px;
     margin-left: -16px;
+    display: none;
 }
 
 .logotipo h2 {
     font: 20px;
+    display: none;
 }
 
 .img-logotipo {
@@ -253,10 +255,10 @@ footer {
 }
 
 main {
-    margin-top: 182px;
     display: flex;
     flex-direction: column;
-    gap: 92px;
+    gap: 72px;
+    margin-top: 120px;
 }
 
 .works {
@@ -345,7 +347,7 @@ main {
     justify-content: center;
     width: 100%;
     height: 100%;
-    
+    padding: 20px;
 }
 
 .works-categories {
@@ -366,7 +368,6 @@ main {
 
 
 .banner {
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -453,6 +454,55 @@ video {
     justify-content: center;
     gap: 27px;
 
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 40px 20px 0px 20px;
+}
+
+.container .box {
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.container .box .column {
+    display: flex;
+    flex-direction: column;
+    width: 32.5%;
+}
+
+.container .box .column img {
+    width: 100%;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    
+}
+
+
+@media only screen and (max-width: 769px) {
+    .container .box {
+        flex-direction: column;
+    }
+    .container .box .column {
+
+        width: 100%;
+    }
+}
+
+.nav-port {
+    display: flex;
+    font-size: 12px;
+    align-items: center;
+    transition: 0.5s;
+    justify-content: space-evenly;
 }
 
 .desc p {
