Illustration Portfolio Updates

--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,7 @@ main {
 
 .ic-works {
     cursor: pointer;
-    background-image: url(/assets/ALLWORKS/THOR5.png);
+    background-image: url(/assets/ALLWORKS/RUKANGRAYSCALE.png);
     background-position: 50% 50%;
     background-size: 100%;
     gap: 10px;
