--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,11 @@ h2 {
     margin-bottom: 27px;
 }
 
+a {
+    text-decoration: none;
+    color: var(--cor1);
+}
+
 .about h3 {
     margin-top: 27px;
 }
@@ -80,6 +85,7 @@ h3 {
     font-style: normal;
     font-weight: bold;
     margin-top: 8px;
+    text-transform: uppercase;
 }
 
 p {
@@ -642,6 +648,16 @@ footer span {
     letter-spacing: 15%;
 }
 
+.social2 {
+    margin-top: 16px;
+    
+    width: 240px;
+}
+
+.svg {
+    filter: invert(8%) sepia(2%) saturate(296%) hue-rotate(314deg) brightness(107%) contrast(78%);
+}
+
 .social {
     display: flex;
     gap: 8px;
@@ -705,6 +721,12 @@ footer span {
 
 
 @media (max-width: 972px) {
+
+    .social2 {
+        width: 100%;
+        transform: scale(1.5);
+        margin-top: 20px;
+    }
 
     h2{
         font-size: 35px;
@@ -835,16 +857,25 @@ footer span {
 
 @media (prefers-color-scheme: dark) {
     body {
-      background-color: rgb(27, 27, 27);
+      background-color: rgb(11, 11, 11);
       color: white;
     }
+
+    .svg {
+        filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(110deg) brightness(110%) contrast(101%);
+    }
+    
 
     footer a {
         color: #e0e0e0;
     }
+   
+    a {
+        color: white;
+    }
 
     header {
-        background-color: rgba(46, 46, 46, 0.45);
+        background-color: #1b1b1b73;
     }
 
     #dlogo {
