--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,11 @@ body {
 
 }
 
+.about img {
+    border-radius: 100%;
+    
+}
+
 header {
     background-color: rgba(255, 255, 255, 0.45);
     box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.05);
